# EduGen

./: .config_backend  .dockerignore  .env  .env.example  .gitattributes  .gitignore  .version  INSTRUKCJA_URUCHOMIENIA.md  NOTATKA_NAPRAWA_PP_2026-03-15.md  README.md  Uruchom_Mac.command  backend_implementation_plan.md  check_update.bat  check_update.sh  database_structure.md  dev_windows.bat  docker-compose.yml  frontend_implementation_plan.md  highend_plan_summary.md  implementation_plan.md  package-lock.json  reset_images_volumes.bat  reset_images_volumes.sh  run_tests_mac_linux.sh  run_tests_windows.bat  start_mac_linux.sh  start_windows.bat  tech_stack.md
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  alembic.ini  fernet_key_generator.py  pyproject.toml  requirements.txt  start_backend_dev.bat  test_font_debug.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_must_change_password.py  002_add_user_ai_models.py  002_add_verification_tokens.py  002_curriculum_document_soft_delete.py  003_add_comments_json_to_prototypes.py  003_add_raw_questions_json_to_prototypes.py  003_curriculum_document_year.py  004_add_curriculum_tables.py  004_add_file_content_cache.py  005_extend_education_level_column.py  005_generation_compliance_options.py  006_class_level_to_string.py  007_multi_user_and_postgres.py
backend/app/: config.py  database.py  dependencies.py  encryption.py  init_app.py  logging_config.py  main.py  schemas.py
backend/app/api/: deps.py
backend/app/core/: config.py  security.py
backend/app/db/: init_db.py  models.py  session.py
backend/app/models/: __init__.py  ai_request.py  backup.py  curriculum_chunk.py  curriculum_document.py  diagnostic_log.py  document.py  file_content_cache.py  generation.py  generation_source_file.py  prototype.py  secret_key.py  session.py  settings.py  source_file.py  subject.py  user.py  user_ai_model.py  verification_token.py
backend/app/parsers/: html_pdf_parser_for_zpe_gov_pl.py
backend/app/routers/: admin.py  auth.py  backups.py  curriculum.py  diagnostics.py  documents.py  files.py  generations.py  levels.py  prototypes.py  secret_keys.py  settings.py  subjects.py  task_types.py  user_ai_models.py
backend/app/schemas/: admin.py  auth.py  backup.py  curriculum.py  diagnostic.py  file.py  (+7 more)
backend/common_filles/: class_levels.csv  task_types.csv
backend/tests/: conftest.py  test_admin_router.py  test_auth_router.py  test_auth_service.py  test_backups_router.py  test_container_config_regression.py  test_diagnostic_service.py  test_diagnostics_router.py  test_docx_service.py  test_encryption.py  test_files_router.py  test_generation_service.py  test_generations_router.py  test_levels_router.py  test_prototypes_router.py  test_schemas.py  test_secret_keys_router.py  test_settings_documents_router.py  test_subjects_router.py  test_task_types_router.py  test_user_ai_models_router.py  test_verification_service.py
(+162 files in other folders)
