[project]
name = "edugen-backend"
version = "0.1.0"
description = "EduGen Local - Backend API for educational content generation"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0",
    "alembic>=1.13.0",
    "bcrypt>=4.0.0",
    "cryptography>=42.0",
    "python-multipart>=0.0.9",
    "openai>=1.30.0",
    "pymupdf>=1.24.0",
    "python-docx>=1.1.0",
    "python-magic>=0.4.27",
    "pydantic-settings>=2.2.0",
    "aiofiles>=23.2.0",
    "apscheduler>=3.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
