[project]
name = "edugen-backend"
version = "0.1.0"
description = "EduGen Local - Backend API for educational content generation"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0",
    "alembic>=1.13.0",
    "bcrypt>=4.0.0",
    "cryptography>=42.0",
    "python-multipart>=0.0.9",
    "requests>=2.31.0",
    "pymupdf>=1.24.0",
    "python-docx>=1.1.0",
    "python-magic>=0.4.27",
    "pydantic-settings>=2.2.0",
    "aiofiles>=23.2.0",
    "apscheduler>=3.10.0",
    "psycopg[binary]>=3.1.0",
    "pyjwt>=2.8.0",
    "email-validator>=2.0.0",
    "markdownify>=0.14.1",
    "pypandoc>=1.14",
    "beautifulsoup4>=4.12.0",
    "xhtml2pdf>=0.2.17",
    "langchain-text-splitters>=0.2.0",
    "pgvector>=0.3.0",
    "playwright>=1.58.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "html-to-markdown>=2.28.2",
    "pdfkit>=1.0.0",
    "pdfplumber>=0.11.9",
    "trafilatura>=2.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]
